# Stats-Web

./: .env.local.example  .gitignore  README.md  bun.lockb  config.yml  ecosystem.config.js  indexer.js  next.config.js  package-lock.json  package.json  run.py  tailwind.config.js  tsconfig.json
data_example/: 0100997014004800_downloads.json  0100997014005001_downloads.json  0100997014005002_downloads.json  0100997017690000_downloads.json
indexer/: Cargo.toml  constants.js  database.js  gameInfo.js  schema.js
indexer/processors/: analytics.js  batch.js  homePageRankings.js  rankings.js
indexer/src/: main.rs
public/: manifest.json
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/[tid]/: page.tsx
src/app/analytics/: page.tsx
src/app/search/: page.tsx
src/components/: analytics-charts.tsx  analytics-filters.tsx  analytics-loading.tsx  download-chart.tsx  empty-state.tsx  filter-button.tsx  game-card.tsx  game-header.tsx  game-stats.tsx  loading-spinner.tsx  navigation.tsx  page-transition.tsx  pagination.tsx  search-bar.tsx  stats-overview.tsx  theme-toggle.tsx  top-games-header.tsx  top-games-section.tsx
src/components/related-content/: base-game.tsx  dlc-section.tsx  index.tsx  (+1 more)
src/lib/: analytics-cache.ts  analytics-store.ts  analytics.ts  api.ts  config.ts  constants.ts  db.ts  game-info.ts  indexer.ts  types.ts  utils.ts  worker.js
src/styles/: globals.css
static/css/: game_info.css  header.css  style.css
static/js/: searchBar.js  showTables.js
templates/: game_info.jinja  index.jinja
utils/: get_config.py  render.py  update_data.py
(+17 files in other folders)
