[package]
name = "game-stats-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rayon = "1.8"
walkdir = "2.4"
notify = "6.1"
dashmap = "5.5"
parking_lot = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"